force-app/main/default/objects/FTMSBillPaymentRequest__c/FTMSBillPaymentRequest__c.object-meta.xml
<CustomObject>
    <label>F/TMS Bill + Payment Request</label>
    <nameField>
        <displayFormat>BPR-{00000}</displayFormat>
        <label>Bill+PR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F/TMS Bill + Payment Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>