force-app/main/default/objects/FTMSBillPaymentRequest__c/fields/AmountTaxBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxBuyingFCY__c</fullName>
    <label>Amount Tax Buying (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>