force-app/main/default/objects/FTMSBillPaymentRequest__c/fields/AmountTaxBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxBuyingLocal__c</fullName>
    <label>Amount Tax Buying (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>