force-app/main/default/objects/FTMSBillPaymentRequest__c/fields/F_TMS_Bill__c.field-meta.xml
<CustomField>
    <fullName>F_TMS_Bill__c</fullName>
    <label>F/TMS Bill</label>
    <referenceTo>FTMSBill__c</referenceTo>
    <relationshipLabel>F/TMS Bill + Payment Request</relationshipLabel>
    <relationshipName>F_TMS_Bill_Payment_Request</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>