force-app/main/default/objects/FTMSBillPaymentRequest__c/fields/PaymentRequestID__c.field-meta.xml
<CustomField>
    <fullName>PaymentRequestID__c</fullName>
    <label>Payment Request ID</label>
    <referenceTo>OperationPaymentRequest__c</referenceTo>
    <relationshipLabel>F/TMS Bill + Payment Request</relationshipLabel>
    <relationshipName>F_TMS_Bill_Payment_Request</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>