force-app/main/default/objects/FTMSBillPaymentRequest__c/fields/TotalAmountofBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingFCY__c</fullName>
    <label>Total Amount of Buying (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>