force-app/main/default/objects/FTMSBillPaymentRequest__c/fields/TotalAmountofBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingLocal__c</fullName>
    <label>Total Amount of Buying (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>