force-app/main/default/objects/FTMSBillPaymentRequest__c/fields/TotalBuyingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxFCY__c</fullName>
    <label>Total Buying Incl Tax (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>