force-app/main/default/objects/FTMSBillPaymentRequest__c/fields/TotalBuyingInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxLocal__c</fullName>
    <label>Total Buying Incl Tax (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>