force-app/main/default/objects/FTMSBillPaymentRequest__c/fields/UnitPriceofBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofBuyingLocal__c</fullName>
    <label>Unit Price of Buying (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>